--- a/src/app/domain/components/loading/loading.component.scss
+++ b/src/app/domain/components/loading/loading.component.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
   mat-progress-spinner {
     transform: scale(0.35);
   }
@@ -18,6 +19,5 @@
     display: flex;
     align-items: center;
     background: #fff;
-    padding-right: 35px;
   }
 }
