Se agregan imgs y se finaliza proyecto

--- a/src/app/domain/components/edit-heroes/edit-heroes.component.scss
+++ b/src/app/domain/components/edit-heroes/edit-heroes.component.scss
@@ -47,3 +47,36 @@ button {
     opacity: 1;
   }
 }
+
+h2 {
+  margin-left: 20px;
+}
+
+.form-content {
+  background: rgb(240, 240, 240);
+  padding: 35px 45px;
+  border-radius: 8px;
+  width: min-content;
+}
+
+.image-upload {
+  position: relative;
+  display: inline-block;
+}
+
+.image-upload img {
+  cursor: pointer;
+  height: 70px;
+  width: 70px;
+  border-radius: 8px;
+  margin-bottom: 12px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.image-preview {
+  height: 70px;
+  width: 70px;
+  object-fit: cover;
+  object-position: center;
+}
