--- a/src/app/domain/components/create-heroes/create-heroes.component.html
+++ b/src/app/domain/components/create-heroes/create-heroes.component.html
@@ -1,20 +1,29 @@
+<!-- TODO: CREATE HEROES, NO SE REUTILIZA COMPONENT CON EDIT-HEROES PARA INTENTAR SIMULAR UN COMPORTAMIENTO DE APP EXTENSO Y ASI PODER TENER DISTINTAS RUTAS EN LA APP -->
 <ng-container>
+    <h2>Create Heroes</h2>
     <form [formGroup]="heroForm" (ngSubmit)="submitForm()">
-        <div>
-            <p for="heroName">Hero Name:</p>
-            <input type="text" [value]="heroForm.get('heroName')?.value | uppercase" formControlName="heroName" />
-        </div>
-        <div>
-            <p for="age">Hero Age:</p>
-            <input type="number" id="age" formControlName="heroAge">
-        </div>
-        <div>
-            <p for="superpower">Hero Superpower:</p>
-            <input type="text" id="superpower" formControlName="superpower">
-        </div>
-        <div>
-            <p for="hero-can-fly">Hero can fly?</p>
-            <mat-slide-toggle id="hero-can-fly" formControlName="heroCanFly">Toggle</mat-slide-toggle>
+        <div class="form-content">
+            <div class="image-upload">
+                <img [src]="heroForm.get('heroPhoto')?.value || 'assets/upload-img.png'" alt="Hero"
+                    (click)="openFileInput()" />
+                <input type="file" #fileInput style="display: none;" accept="image/*" (change)="onFileChange($event)">
+            </div>
+            <div>
+                <p for="heroName">Hero Name:</p>
+                <input type="text" [value]="heroForm.get('heroName')?.value | uppercase" formControlName="heroName" />
+            </div>
+            <div>
+                <p for="age">Hero Age:</p>
+                <input type="number" id="age" formControlName="heroAge">
+            </div>
+            <div>
+                <p for="superpower">Hero Superpower:</p>
+                <input type="text" id="superpower" formControlName="superpower">
+            </div>
+            <div>
+                <p for="hero-can-fly">Hero can fly?</p>
+                <mat-slide-toggle id="hero-can-fly" formControlName="heroCanFly"></mat-slide-toggle>
+            </div>
         </div>
         <button (click)="navigateTo('../')" color="light" mat-fab extended>
             Back to the list
