--- a/src/app/domain/components/heroes/heroes.component.scss
+++ b/src/app/domain/components/heroes/heroes.component.scss
@@ -21,6 +21,7 @@ body {
   border-radius: 10px;
   margin-top: 30px;
   font-size: 16px;
+  animation: slideFromBottom 1s ease;
   span {
     color: red;
     cursor: pointer;
@@ -59,6 +60,14 @@ body {
 .hero-item-info {
   display: flex;
   flex-direction: column;
+  img {
+    margin-bottom: 10px;
+    border-radius: 8px;
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    object-position: center;
+  }
   h1,
   h3 {
     margin-bottom: 5px;
